@@ -2,11 +2,7 @@ require File.dirname(__FILE__) + '/test_unit_spec_helper'
 
 describe "ExampleGroup with test/unit/interop" do
   include TestUnitSpecHelper
-  
-  def resources
-    File.dirname(__FILE__) + "/resources"
-  end
-  
+    
   describe "with passing examples" do
     it "should output 0 failures" do
       output = ruby("#{resources}/spec_that_passes.rb")
