@@ -3,6 +3,10 @@ require File.dirname(__FILE__) + '/../../../../ruby_forker'
 
 module TestUnitSpecHelper
   include RubyForker
+
+  def resources
+    File.dirname(__FILE__) + "/resources"
+  end
   
   def run_script(file_name)
     output = ruby(file_name)
